--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "dependencies": {
     "axios": "^1.3.5",
     "dotenv": "^16.0.3",
-    "openai": "^3.2.1"
+    "hnswlib-node": "^1.4.2",
+    "langchain": "^0.0.59",
+    "openai": "^3.2.1",
+    "typeorm": "^0.3.15"
   }
 }
